# Project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.en.md  README.md  cosmos2025.cpp  error_utils.cpp  error_utils.h  errors.h  execution_context.h  library.cpp  library.h  localization.cpp  localization.h  logger.cpp  logger.h  reporting.cpp  reporting.h  user_messages.cpp  user_messages.h
.githooks/: pre-commit
.github/workflows/: docs.yml
docs/: algorithm_rk4.md  architecture.md  backup.md  components.md  deployment.md  examples.md  generate_docs.md  index.md  linting.md  logic.md  performance.md  update.md
docs/en/: algorithm_rk4.md  architecture.md  backup.md  components.md  deployment.md  examples.md  generate_docs.md  index.md  linting.md  logic.md  update.md
scripts/: backup.bat  build.bat  check.bat  dev_run.bat  format.bat  lint.bat  prod_run.bat  update.bat
